<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-109dp"
        tools:layout_editor_absoluteY="-162dp">

        <ImageView
            android:id="@+id/account_circle"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/account_circle" />

        <EditText

            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="18dp"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText

            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="#5D53E4"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:text="@string/login" />
        <TextView
            android:id="@+id/create_new_account"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:clickable="true"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>