<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_margin="8dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linear_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                >


                <TextView
                    android:id="@+id/date_title"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:gravity="start|center"
                    android:text="@string/date"
                    android:textSize="15sp"

                    />

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:gravity="start|center"
                    android:text="@string/events"
                    android:textSize="15sp"

                    />

            </LinearLayout>




        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/add_event_view"
        android:layout_width="180dp"
        android:layout_height="71dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#2F1895"
        android:gravity="center"
        android:text="@string/add_event"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>